--- a/index.html
+++ b/index.html
@@ -117,6 +117,38 @@
             {
                 name: "milmitt",
                 coords: [1.6, 2.4]
+            },
+            {
+                name: "Demoman",
+                coords: [3.1, 3.9]
+            },
+            {
+                name: "nerd",
+                coords: [2.3, 3.1]
+            },
+            {
+                name: "gomby",
+                coords: [1.9, 2.9]
+            },
+            {
+                name: "vix quix",
+                coords: [2.3, 3.1]
+            },
+            {
+                name: "infernihunter",
+                coords: [1.6, 1.6]
+            },
+            {
+                name: "geesel",
+                coords: [3.6, 3.1]
+            },
+            {
+                name: "Ava Joy",
+                coords: [1.4, 2.3]
+            },
+            {
+                name: "yagrum",
+                coords: [2.2, 2.5]
             }
         ]
 
